Context - Cart Icon & Dropdown

--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -11,7 +11,7 @@
       padding: 25px;
     }
   
-    .nav-links-container {
+    .links-container {
       width: 50%;
       height: 100%;
       display: flex;
