--- a/src/routes/category/category.styles.scss
+++ b/src/routes/category/category.styles.scss
@@ -1,6 +1,11 @@
 .category-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    column-gap: 20px;
-    row-gap: 50px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 20px;
+  row-gap: 50px;
+}
+.category-title {
+  font-size: 28;
+  margin-bottom: 25px;
+  text-align: center;
 }
