--- a/src/components/directory-item/directory-item-styles.scss
+++ b/src/components/directory-item/directory-item-styles.scss
@@ -19,7 +19,7 @@
             transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
         }
 
-        & .directory-item-body {
+        & .body {
             opacity: 0.9;
         }
     }
@@ -43,7 +43,7 @@
         background-position: center;
     }
 
-    .directory-item-body {
+    .body {
         height: 90px;
         padding: 0 25px;
         display: flex;
